--- a/pages/layout.html
+++ b/pages/layout.html
@@ -4,6 +4,7 @@
     {% block head %}
     <title>LynixCA - {% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="/assets/app.css">
+    <meta name="viewport" content="width=device-width">
     {% endblock head %}
 </head>
 
