--- a/pages/error.html
+++ b/pages/error.html
@@ -3,6 +3,7 @@
 <head>
     <title>LynixCA - Error</title>
     <link rel="stylesheet" href="/assets/app.css">
+    <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
