--- a/pages/layout.html
+++ b/pages/layout.html
@@ -33,15 +33,15 @@
                             </ul>
                             <p>Furry Content</p>
                             <ul>
-                                <li><a href="/fursuit">Fursuit</a></li>
+                                <li style="display: none;"><a href="/fursuit">Fursuit</a></li>
                                 <li><a href="/fursona">Fursona</a></li>
                             </ul>
-                            <p>Wiki</p>
+                            <!--<p>Wiki</p>
                             <ul>
                                 <li><a href="/infosec/notes">Cybersecurity Notes</a></li>
                                 <li><a href="https://docs.lynix.ca/">Documentation</a></li>
                                 <li><a href="/experiments">Experiments</a></li>
-                            </ul>
+                            </ul>-->
                         </div>
                     </div>
                     <hr/>
