Publish new websocket server

--- a/pages/error.html
+++ b/pages/error.html
@@ -2,13 +2,13 @@
 <html lang="en" data-theme="dark">
 <head>
     <title>LynixCA - Error</title>
-    <link rel="stylesheet" href="/assets/app.css">
+    <link rel="stylesheet" href="/static/app.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
     <div class="floof-error" style="text-align: center;">
-        <img src="/assets/imgs/lynix-cute.png" alt="Lynix being cute peeking" class="center"/>
+        <img src="/static/imgs/lynix-cute.png" alt="Lynix being cute peeking" class="center"/>
         <h1 style="font-size: 4rem"><span class="text-green">[</span><span class="text-cyan">{{status}}</span><span class="text-green">]</span></h1>
         <p style="font-size: 2rem">{{message}}</p>
     </div>
