--- a/pages/fursona.html
+++ b/pages/fursona.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="floof-content">
     <h1>My Fursona - Lynix</h1>
-    <img src="/assets/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
+    <img src="/static/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
     <p class="mt-3 text-base sm:text-md">
         <span class="text-cyan">What's a fursona?</span> A fursona
         is a customized animal character representing someone in the furry fandom,
