--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
 
 
                 <h1>Welcome to my website!</h1>
-                <img src="/assets/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
+                <img src="/static/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
 
                 <p>
                     Greetings, I am Anthony, also known as Lynix. I am a dedicated Cybersecurity student actively pursuing opportunities to further my knowledge and gain practical experience in the field. Beyond my academic pursuits, I have a fervor for artistic expression, dedicating my free time to web development. Additionally, I find relaxation and exploration in the realm of video games. I am proudly located in Canada, evident from my domain name using the .ca extension.</p>
