--- a/pages/layout.html
+++ b/pages/layout.html
@@ -3,7 +3,7 @@
 <head>
     {% block head %}
     <title>LynixCA - {% block title %}{% endblock title %}</title>
-    <link rel="stylesheet" href="/assets/app.css">
+    <link rel="stylesheet" href="/static/app.css">
     <meta name="viewport" content="width=device-width">
     {% endblock head %}
 </head>
