--- a/pages/index.html
+++ b/pages/index.html
@@ -2,13 +2,10 @@
 {% block content %}
             <div class="floof-content">
 
-
-                <div class="floof-alert animated-gradient">
-                    <p>Welcome to the new Lynix.ca, built with Rust & FloofRender! <span style="font-weight: 600;">Learn More</span></p>
-                </div>
-
-
                 <h1>Welcome to my website!</h1>
+                <blockquote style="margin-left:0;">
+                    <p style="color:orangered;"><span class="notice" style="font-weight:700;color:orangered;">[!] Downtime Notice:</span> Some services may be offline on Saturday and Sunday due to hurricane lee hitting the Maritimes, this is not limited to the NeosVR Instance but also MOC-1 Server, MOC-2 Server. Some servers may shut down early to prevent data loss and corruption. </p>
+                </blockquote><br/>
                 <img src="/static/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
 
                 <p>
