--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,9 @@
 
                 <h1>Welcome to my website!</h1>
                 <blockquote style="margin-left:0;">
+                    <p style="color:color:#0891b2;"><span class="notice" style="font-weight:700;color:#0891b2;">[!] Migration Notice:</span> The Lynx Network is having a provider change, migration will take place and cause no downtime. Learn more about where we will now store our data at %link_notice%!</p>
+                </blockquote>
+                <blockquote style="margin-left:0;">
                     <p style="color:orangered;"><span class="notice" style="font-weight:700;color:orangered;">[!] Downtime Notice:</span> Some services may be offline on Saturday and Sunday due to hurricane lee hitting the Maritimes, this is not limited to the NeosVR Instance but also MOC-1 Server, MOC-2 Server. Some servers may shut down early to prevent data loss and corruption. </p>
                 </blockquote><br/>
                 <img src="/static/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
