Add Image Optimization API

--- a/pages/fursona.html
+++ b/pages/fursona.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layouts/layout.html" %}
 {% block content %}
 <div class="floof-content">
     <h1>My Fursona - Lynix</h1>
