--- a/pages/index.html
+++ b/pages/index.html
@@ -1,15 +1,10 @@
-{% extends "layout.html" %}
+{% extends "layouts/layout.html" %}
 {% block content %}
             <div class="floof-content">
 
                 <h1>Welcome to my website!</h1>
-                <blockquote style="margin-left:0;">
-                    <p style="color:color:#0891b2;"><span class="notice" style="font-weight:700;color:#0891b2;">[!] Migration Notice:</span> The Lynx Network is having a provider change, migration will take place and cause no downtime. Learn more about where we will now store our data at %link_notice%!</p>
-                </blockquote>
-                <blockquote style="margin-left:0;">
-                    <p style="color:orangered;"><span class="notice" style="font-weight:700;color:orangered;">[!] Downtime Notice:</span> Some services may be offline on Saturday and Sunday due to hurricane lee hitting the Maritimes, this is not limited to the NeosVR Instance but also MOC-1 Server, MOC-2 Server. Some servers may shut down early to prevent data loss and corruption. </p>
-                </blockquote><br/>
-                <img src="/static/imgs/Lynix.png" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
+                <br/>
+                <img src="/api/img?path=Lynix.png&height=160&width=160" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
 
                 <p>
                     Greetings, I am Anthony, also known as Lynix. I am a dedicated Cybersecurity student actively pursuing opportunities to further my knowledge and gain practical experience in the field. Beyond my academic pursuits, I have a fervor for artistic expression, dedicating my free time to web development. Additionally, I find relaxation and exploration in the realm of video games. I am proudly located in Canada, evident from my domain name using the .ca extension.</p>
