--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,10 @@
 {% block content %}
             <div class="floof-content">
 
+                <img style="max-width: 800px;border: 3px solid var(--primary-cyan);" src="https://cdn.discordapp.com/attachments/1020310408118145127/1154590850274316318/85ad9709-27f2-4859-8c43-33f3920e485f.png">
+
+                <p><span class="notice" style="font-weight:700;color:#c2410c;">[!] Downtime Notice:</span> Downtime is currently present on Lynixless a NeosVR Headless Server that I own. I will be migrating it over to Resonite! Goodnight NeosVR!</p>
+
                 <h1>Welcome to my website!</h1>
                 <br/>
                 <img src="/api/img?path=Lynix.png&height=160&width=160" alt="Lynix's Fursona drawn by Mulliganos" class="sidepfp">
